# NovaGear

./: BUG_FIXES_REPORT.md  DATASEEDER_IMPROVEMENTS.md  FIXES_COMPLETE.md  LESSONS_FIXED_ERRORS.md  PAYOS_INTEGRATION.md  README.md  SEEDING.md  application.yaml  dev-helper.ps1  docker-compose.yml  package-lock.json  package.json
AI/: .env.example  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
AI/app/: __init__.py  main.py
AI/app/api/: __init__.py  router.py
AI/app/api/v1/: __init__.py  health.py  rag.py  router.py  search.py
AI/app/core/: __init__.py  config.py
AI/app/schemas/: __init__.py  ai.py
AI/app/services/: __init__.py  rag_service.py  search_service.py
AI/scripts/: smoke_live_rag_test.py  smoke_test.py
backend/Auth/: pom.xml
backend/Cart/: pom.xml
backend/Inventory/: pom.xml
backend/Notification/: pom.xml
backend/Order/: pom.xml
backend/Payment/: PAYOS_SANDBOX_SETUP.md  pom.xml
backend/Product/: pom.xml
backend/Shipping/: Dockerfile  pom.xml
backend/User/: Dockerfile  pom.xml
docker/observability/: loki-config.yml  promtail-config.yml
docker/postgres/init/: 00-create-database.sql  01-auth.sql  (+7 more)
docs/: SRS_COMPLETE.md
frontend/: Dockerfile  README_LIBRARIES.md  nginx.conf  package-lock.json  package.json  requirements.txt  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
gateway/gateway/: pom.xml
tests/: package.json  run-test.js
tests/codeceptjs/: bootstrap.js
tests/postman/: NovaGear_Functional_Security_Tests.json  run-postman-tests.js  run-tests.ps1
(+343 files in other folders)
